[package]
name = "termprogress"
description = "A terminal progress bar renderer with status and spinners"
license = "GPL-3.0-or-later"
version = "0.10.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["size"]

# Use terminal size when drawing bars.
size = ["terminal_size"]

# React to `SIGWINCH` when `stdout` is a terminal (linux only.)
reactive = []

[dependencies]
atomic_refcell = "0.1.10"
stackalloc = "1.2.0"
terminal_size = {version = "0.1", optional = true}
[build-dependencies]
rustc_version = "0.2"

