[package]
name = "termprogress"
description = "A terminal progress bar renderer with status and spinners"
license = "GPL-3.0-or-later"
version = "0.11.0"
authors = ["Avril <flanchan@cumallover.me>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["size"]

# Use terminal size when drawing bars.
size = ["dep:terminal_size"]

# TODO: React to `SIGWINCH` when output stream is a terminal (linux only.)
# reactive = []

[dependencies]
atomic_refcell = "0.1.10"
stackalloc = "1.2.0"
terminal_size = {version = "0.4", optional = true}

[build-dependencies]
rustc_version = "0.4"

